syntax = "proto3";

package auth;

option go_package = "./pkg/auth/pb";

service AuthService{
    rpc Registration(RegistrationRequest) returns (Response){}
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc Validate(ValidateRequest) returns (ValidateResponse){}
}

// Login
message LoginRequest{
    string authstring = 1;
    string password = 2;
}

message LoginResponse {
    Response response = 1;
    string token = 2;
}

// Registration
message RegistrationRequest{
    string name = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

// Validate
message ValidateRequest{
    string token = 1;
}

message ValidateResponse{
    Response response = 1;
    string userID = 2;
}

// Response
message Response {
    int64 status = 1;
    string error = 2;
}

  