syntax = "proto3";

package user;

option go_package = "./pkg/user-service/pb";

service UserService{
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse){}
    rpc GetMyFeed (GetMyFeedRequest) returns (GetMyFeedResponse){}
    rpc CheckMySubs(CheckMySubsRequest) returns (CheckMySubsResponse){}
    rpc GetMySubscriptions(GetMySubscriptionsRequest) returns (GetMySybscriptionsResponse){}

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse){}
    rpc GetNewUsers(GetNewUsersRequest) returns (GetNewUsersResponse){}
    rpc GetAllReviews(GetAllReviewsRequest) returns (GetAllReviewsResponse){}

    rpc AddNewSubscription(AddNewSubscriptionRequest) returns (AddNewSubscriptionResponse){}
    rpc DeleteSubscription(DeleteSubscriptionRequest) returns (DeleteSubscriptionResponse){}

    rpc GetPost(GetPostRequest) returns (GetPostResponse){}
    rpc GetLastPosts(GetLastPostsRequest) returns (GetLastPostsResponse){}
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse){}
    rpc GetPostsForBook(GetPostsForBookRequest) returns (GetPostsForBookResponse){}

    rpc SearchUser(SearchUserRequest) returns (SearchUserResponse){}
}

message GetAllReviewsRequest{
}

message GetAllReviewsResponse{
    repeated Feed feed = 1;
    Response response = 2;
}

message GetPostsForBookRequest{
    string id = 1;
}

message GetPostsForBookResponse{
    repeated Feed feed = 1;
    Response response = 2;
}

// Search User
message SearchUserRequest{
    string queary = 1;
}

message SearchUserResponse{
    repeated User user = 1;
}

// GetSubs
message GetMySubscriptionsRequest{
    string id = 1;
}

message GetMySybscriptionsResponse{
    repeated User user = 1;
    Response response = 2;
}

// CheckSubs
message CheckMySubsRequest{
    string myid = 1;
    string userid = 2;
}

message CheckMySubsResponse{
    string boolcheck = 1;
    Response response = 2;
}

// DeletePost
message DeletePostRequest{
    string userid = 1;
    string postid = 2;
}

message DeletePostResponse{
    Response response = 1;
}

// GetMyFeed get my posts and posts of my subs
message GetMyFeedRequest{
    string id = 1;
}

message GetMyFeedResponse{
    repeated Feed feed = 1;
    Response response = 2;
}

message Feed{
    string username = 1;
    string authorName = 2;
    string authorSurname = 3;
    string title = 4;
    string content = 5;
    string date = 6;
    string status = 7;
    string userid = 8;
}

message GetMyPostsRequest{
    string id = 1;
}

// GetUser
message GetUserRequest{
    string id = 1;
}

message GetUserResponse{
    User user = 1;
    repeated Post post = 2;
    Response response = 3;
}

// UpdateUser
message UpdateUserRequest{
    string id  = 1;
    optional string status = 4;
    optional string name = 5;
    optional string username = 6;
    optional string newpassword = 7;
    optional string oldpassword = 8;
}

message ChangePasswrod{
    string passwordOld = 1;
    string passwordNew = 2;
}

message UpdateUserResponse{
    Response response = 1;
}

// DeleteUser
message DeleteUserRequest{
    string id = 1;
}

message DeleteUserResponse{
    Response response = 1;
}

// GetNewUsers
message GetNewUsersRequest{
    string id = 1;
}

message GetNewUsersResponse{
    repeated User user = 1;
    Response response = 2;
}

// AddNewSubscription
message AddNewSubscriptionRequest{
    string id = 1;
    string userid = 2;
}

message AddNewSubscriptionResponse{
    Response response = 1;
}

// DeleteNewSubscription
message DeleteSubscriptionRequest{
    string id = 1;
    string userid = 2;
}

message DeleteSubscriptionResponse{
    Response response = 1;
}

// GetPost
message GetPostRequest{
    string postid = 1;
}

message GetPostResponse{
    Post post = 1;
    Response response = 2;
}

// GetLastPosts
message GetLastPostsRequest{
    string id = 1;
}

message GetLastPostsResponse{
    repeated LastPost post = 1;
    Response response = 2;
}

// CreatePost
message CreatePostRequest{
    string id = 1;
    Post newpost = 2;
}

message CreatePostResponse{
    Response response = 1;
}

// User
message User{
    string name = 1;
    string username = 2;
    string email = 3;
    string status = 4;
    string joinDate = 5;
    string id = 6;
}

// Post
message Post{
    string authorName = 1;
    string authorSurname = 2;
    string title = 3;
    string content = 4;
}

message LastPost{
    string id = 1;
    string title = 2;
}

// Response
message Response {
    int64 status = 1;
    string error = 2;
}


